--- a/css/main.css
+++ b/css/main.css
@@ -15,28 +15,28 @@ article {
 	margin-bottom: 50px;
 }
 
-h1 {
+article h1 {
 	font-family: 'Stardos Stencil';
 	font-weight: 500;
 	font-size: 30px;
 }
 
-h2 {
+article h2 {
 	margin: 20px 0 5px 0;
 	font-size: 16px;
 	font-weight: 500;
 }
 
-ul {
+article ul {
 	margin-top: 0;
 }
 
-ul li{
+article ul li{
 	padding-top:5px;
 	padding-bottom:5px;
 }
 
-a {
+article a {
 	color: #9BC8A1;
 }
 
@@ -82,17 +82,12 @@ canvas:nth-of-type(6) {
 	z-index: 5;
 }
 
-#msg-err {
-	margin: 10px;
-	display: inline-block;
-}
-
 button:hover {
 	cursor: pointer;
 }
 
-#command-container,
-#recipe-container {
+#site-command-container,
+#site-recipe-container {
 	background-color: rgb(41, 38, 30);
 	margin-top: 20px;
 	padding-top: 10px;
@@ -100,7 +95,7 @@ button:hover {
 	overflow-x: hidden;
 }
 
-#command-container ul {
+#site-command-container ul {
 	margin-bottom: 0;
 	display: -webkit-flex;
 	display: flex;
@@ -111,52 +106,52 @@ button:hover {
 	height: 550px;
 }
 
-#command-container ul > li {
+#site-command-container ul > li {
 	margin-right: 30px;
 }
 
-#command-container span:first-child {
+#site-command-container span:first-child {
 	display: block;
 	float: left;
 }
 
-#command-container span:last-child {
+#site-command-container span:last-child {
 	display: block;
 	margin-left: 90px;
 }
 
-#recipe-container li:first-child {
+#site-recipe-container li:first-child {
 	list-style: none;
 }
 
-#recipe-container li:first-child .cost {
+#site-recipe-container li:first-child .cost {
 	margin-left: 75px;
 }
 
-#recipe-container span:nth-of-type(1) {
+#site-recipe-container span:nth-of-type(1) {
 	position: absolute;
 	left: 60px;
 }
 
-#recipe-container span:nth-of-type(2) {
+#site-recipe-container span:nth-of-type(2) {
 	display: block;
 	float: left;
 	margin-left: 90px;
 }
 
-#recipe-container span:nth-of-type(3) {
+#site-recipe-container span:nth-of-type(3) {
 	display: block;
 	margin-left: 150px;
 }
 
 @media screen and (max-width: 850px) {
-	#command-container ul {
+	#site-command-container ul {
 		height: 820px;;
 	}
 }
 
 @media screen and (max-width: 600px) {
-	#command-container ul {
+	#site-command-container ul {
 		height: auto;
 	}
 }
