Map以外のCanvas関連の記述を削除・DOMと統合
canvas-bufをground・object・shadow・cursorに分離
option.displayを廃止
option.shadowの初期値をtrueに変更
itemTabのwandのcolorをdataに保管
enemy変容時にgroupで生成されないよう修正
minimapを[e]で敵を表示・[c]で閉じるよう修正
mimic生成時のcolor抜けに一時的な対処

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,15 @@
+html, body {
+    height: 100%;
+}
+
 body{
 	color:white;
 	background:#3A362D;
 	font-family: "'Yu Gothic', 'Hiragino Kaku Gothic Pro', 'Hiragino Kaku Gothic ProN', 'TakaoExGothic', 'Meiryo', 'MS PGothic', sans-serif";
 	font-size: 14px;
 	letter-spacing: 1px;
-}
-
-main{
-	padding-left:5px;
+	margin: 0;
+	padding: 5px;
 }
 
 article {
@@ -42,44 +44,6 @@ article a {
 
 footer {
 	text-align: center;
-}
-
-#canvas-container{
-	background-color: black;
-	border: 2px solid #E8D296;
-	margin: 20px auto 50px;
-	position:relative;
-	overflow: hidden;
-}
-
-canvas {
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-canvas:nth-of-type(1) {
-	z-index: 0;
-}
-
-canvas:nth-of-type(2) {
-	z-index: 1;
-}
-
-canvas:nth-of-type(3) {
-	z-index: 2;
-}
-
-canvas:nth-of-type(4) {
-	z-index: 3;
-}
-
-canvas:nth-of-type(5) {
-	z-index: 4;
-}
-
-canvas:nth-of-type(6) {
-	z-index: 5;
 }
 
 button:hover {
