--- a/css/game.css
+++ b/css/game.css
@@ -3,6 +3,10 @@
   box-sizing: border-box
 }
 
+[v-cloak] {
+    display: none;
+}
+
 .game-container ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
@@ -25,8 +29,9 @@
 .game-container {
     font-family: Arial, 'Yu Gothic', 'Hiragino Kaku Gothic Pro', 'Hiragino Kaku Gothic ProN', 'TakaoExGothic', 'Meiryo', 'MS PGothic', sans-serif;
     width: 100%;
+    height: 100%;
     max-width: 1000px;
-    height: 600px;
+    max-height: 1000px;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
@@ -68,16 +73,6 @@
     left: 0;
     background-color: black;
     z-index: 10;
-}
-
-#game-loader.hide::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
 }
 
 #game-loader .title,
@@ -134,92 +129,15 @@
     width: 100%;
     height: 100%;
     position: relative;
+    background-color: black;
 }
 
-#map-main-container,
-#map-mini-container {
+#canvas-container{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    color: white;
-    background-color: black;
-
-    /* Window Resize */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#map-mini-container {
-    font-size: 9px;
-}
-
-.grid-map {
-    display: flex;
-}
-
-.grid-map.blinded::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-}
-
-.grid-map.hallucinated {
-    text-shadow: 1px 1px 0 purple;
-}
-
-.grid-map ul {
-    background-color: black;
-}
-
-.grid-map ul > li {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#map-main-container .grid-map ul > li {
-    height: 18px;
-    width: 18px;
-}
-
-/* TODO */
-#map-mini-container .grid-map ul > li {
-    height: 9px;
-    width: 9px;
-}
-
-.grid-map ul > li.cursor {
-    border: 1px solid yellow;
-}
-
-.grid-map .asterisk {
-    position: absolute;
-    opacity: .5;
-    font-size: 1.2em;
-}
-
-.grid-map ul > li.sight-shadow::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    opacity: .5;
-}
-
-.rogue {
-    z-index: 1;
 }
 
 #message-container {
@@ -709,4 +627,8 @@
 
 #recipe .item-recipe {
     flex: 1;
+}
+
+.hide {
+    display: none;
 }
