--- a/css/game.css
+++ b/css/game.css
@@ -7,17 +7,31 @@
     display: none;
 }
 
-.game-container ::-webkit-scrollbar {
+p {
+    margin: 0;
+}
+
+ul {
+    list-style: none;
+}
+
+ul,
+li {
+    margin: 0;
+    padding: 0;
+}
+
+#game-container ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
 }
 
-.game-container ::-webkit-scrollbar-track {
+#game-container ::-webkit-scrollbar-track {
     background-color: gray;
     border-radius: 10px;
 }
 
-.game-container ::-webkit-scrollbar-thumb {
+#game-container ::-webkit-scrollbar-thumb {
     background-color: rgba(0,0,0,.7);
     border-radius: 10px;
 
@@ -26,7 +40,7 @@
     box-shadow: inset 0 0 2px rgba(255,255,255,1)
 }
 
-.game-container {
+#game-container {
     font-family: Arial, 'Yu Gothic', 'Hiragino Kaku Gothic Pro', 'Hiragino Kaku Gothic ProN', 'TakaoExGothic', 'Meiryo', 'MS PGothic', sans-serif;
     width: 100%;
     height: 100%;
@@ -49,20 +63,6 @@
 
     /* Temp */
     line-height: 23px;
-}
-
-.game-container ul {
-    list-style: none;
-}
-
-.game-container p {
-    margin: 0;
-}
-
-.game-container ul,
-.game-container li {
-    margin: 0;
-    padding: 0;
 }
 
 #game-loader {
@@ -129,7 +129,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: black;
 }
 
 #canvas-container{
@@ -138,9 +137,10 @@
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: black;
 }
 
-#message-container {
+#message-temp-container {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -154,12 +154,12 @@
     /* pointer-events: none; */
 }
 
-#msg-temp-container {
+.message-temp-box {
     padding: 5px 20px;
     width: 45%;
 }
 
-#msg-temp-container li {
+.message-temp-box li {
     /* IE Firefox */
     word-wrap: break-word;
     overflow-wrap: break-word;
@@ -240,7 +240,7 @@
 }
 
 .rogue-boxes-list {
-    margin-left: 10px !important;
+    margin-left: 10px;
     border: 1px solid gray;
     color: gray;
     width: 25px;
@@ -511,7 +511,7 @@
     display: flex;
 }
 
-#bookmark .skill-key {
+#bookmark-container .skill-key {
     width: 50px;
     text-align: left;
 }
@@ -614,21 +614,25 @@
     width: 100px;
 }
 
-#recipe .item-name {
+#recipe-container .item-name {
     width: 100px;
     text-align: center;
 }
 
-#recipe .item-cost {
+#recipe-container .item-cost {
     width: 50px;
     text-align: right;
     padding-right: 20px;
 }
 
-#recipe .item-recipe {
+#recipe-container .item-recipe {
     flex: 1;
 }
 
 .hide {
     display: none;
+}
+
+.front {
+    z-index: 100;
 }
