--- a/css/main.css
+++ b/css/main.css
@@ -2,48 +2,153 @@ html, body {
     height: 100%;
 }
 
-body{
+body {
 	color:white;
 	background:#3A362D;
 	font-family: "'Yu Gothic', 'Hiragino Kaku Gothic Pro', 'Hiragino Kaku Gothic ProN', 'TakaoExGothic', 'Meiryo', 'MS PGothic', sans-serif";
 	font-size: 14px;
 	letter-spacing: 1px;
 	margin: 0;
-	padding: 5px;
+	padding: 5px 25px;
 }
 
-article {
-	margin-left: 10px;
-	margin-bottom: 50px;
+#modal-link-container {
+	position: fixed;
+	top: 50%;
+	right: 1%;
+	z-index: 101;
+	transform: translateY(-50%);
 }
 
-article h1 {
+.modal-link-list {
+	display: flex;
+	flex-direction: column;
+}
+
+.modal-link-list > li {
+	margin-bottom: 10px;
+}
+
+.modal-link {
+	position: relative;
+}
+
+.modal-link-circle {
+	display: block;
+	border-radius: 50%;
+	width: 10px;
+	height: 10px;
+	background-color: #fff;
+}
+
+.modal-open > .modal-link-circle,
+.modal-link:hover > .modal-link-circle,
+.modal-link:focus > .modal-link-circle {
+	background-color: #CA9D48 !important;
+}
+
+.popup {
+    background-color: #fff;
+    color: #3A362D;
+    display: none;
+    font-size: 12px;
+    padding: 5px 10px;
+	position: absolute;
+	top: -20px;
+	right: 5px;
+    white-space: nowrap;
+    z-index: 9999;
+}
+
+.modal-link:hover > .popup {
+    display: inline;
+}
+
+.modal-container {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+}
+
+.modal-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0,.7);
+}
+
+.modal-overlay::before {
+	content: '×';
+	position: absolute;
+	top: 0;
+	right: 0;
+	color: #fff;
+	cursor: pointer;
+	width: 50px;
+	height: 50px;
+	font-size: 40px;
+	font-weight: 500;
+	text-align: center;
+}
+
+.modal-content {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	height: 95%;
+	width: 75%;
+	background-color: #29261e;
+	overflow: auto;
+}
+
+.modal-content {
+	padding: 10px;
+}
+
+.modal-content .title {
 	font-family: 'Stardos Stencil';
 	font-weight: 500;
 	font-size: 30px;
 }
 
-article h2 {
+.modal-content h2 {
 	margin: 20px 0 5px 0;
 	font-size: 16px;
 	font-weight: 500;
 }
 
-article ul {
-	margin-top: 0;
-}
-
-article ul li{
-	padding-top:5px;
-	padding-bottom:5px;
-}
-
-article a {
+.modal-content a {
 	color: #9BC8A1;
+}
+
+.modal-content > ul,
+.modal-content > section {
+	padding-left: 10px;
+}
+
+#link-system ul {
+	list-style-type: disc;
+	padding-left: 40px;
+}
+
+.modal-content ul > li {
+	margin-bottom: 10px;
 }
 
 footer {
 	text-align: center;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	margin-bottom: 10px;
 }
 
 button:hover {
@@ -52,22 +157,17 @@ button:hover {
 
 #site-command-container,
 #site-recipe-container {
-	background-color: rgb(41, 38, 30);
-	margin-top: 20px;
-	padding-top: 10px;
-	padding-bottom: 5px;
-	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 #site-command-container ul {
-	margin-bottom: 0;
 	display: -webkit-flex;
 	display: flex;
 	-webkit-flex-direction: column;
 	flex-direction: column;
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
-	height: 550px;
+	height: 560px;
 }
 
 #site-command-container ul > li {
@@ -84,37 +184,33 @@ button:hover {
 	margin-left: 90px;
 }
 
-#site-recipe-container li:first-child {
-	list-style: none;
-}
-
 #site-recipe-container li:first-child .cost {
 	margin-left: 75px;
 }
 
 #site-recipe-container span:nth-of-type(1) {
 	position: absolute;
-	left: 60px;
+	left: 20px;
 }
 
 #site-recipe-container span:nth-of-type(2) {
 	display: block;
 	float: left;
-	margin-left: 90px;
+	margin-left: 100px;
 }
 
 #site-recipe-container span:nth-of-type(3) {
 	display: block;
-	margin-left: 150px;
+	margin-left: 160px;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1050px) {
 	#site-command-container ul {
-		height: 820px;;
+		height: 820px;
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
 	#site-command-container ul {
 		height: auto;
 	}
