--- a/css/game.css
+++ b/css/game.css
@@ -37,7 +37,8 @@ li {
 
 
     /* TEMP */
-    box-shadow: inset 0 0 2px rgba(255,255,255,1)
+    -webkit-box-shadow: inset 0 0 2px rgba(255,255,255,1);
+            box-shadow: inset 0 0 2px rgba(255,255,255,1)
 }
 
 #game-container {
@@ -51,7 +52,8 @@ li {
     overflow: hidden;
     -ms-user-select: none;
     -webkit-user-select: none;
-    user-select: none;
+    -moz-user-select: none;
+         user-select: none;
 
     font-size: 18px;
 
@@ -160,7 +162,6 @@ li {
 }
 
 .message-temp-box li {
-    /* IE Firefox */
     word-wrap: break-word;
     overflow-wrap: break-word;
 }
@@ -172,8 +173,13 @@ li {
     bottom: 0;
     left: 0;
     background-color: black;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     font-size: .9em;
 }
 
@@ -208,35 +214,56 @@ li {
 }
 
 .stats-fixed-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     height: 100%;
     padding: 0 10px;
     overflow: hidden;
 }
 
 .stats-fixed-list-top {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 50%;
 }
 
 .stats-fixed-list-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 50%;
 }
 
 .stats-fixed-left-container
 .stats-fixed-list-bottom {
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
 }
 
 .stats-fixed-right-container
 .stats-fixed-list-bottom {
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
 }
 
 .rogue-boxes-list {
@@ -246,9 +273,15 @@ li {
     width: 25px;
     height: 25px;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .rogue-boxes-list > .item-num,
@@ -285,8 +318,11 @@ li {
     position: absolute;
     bottom: 0;
     left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap-reverse;
+    -ms-flex-wrap: wrap-reverse;
+        flex-wrap: wrap-reverse;
 }
 
 #condition-container > ul > li {
@@ -319,17 +355,32 @@ li {
     bottom: 10px;
     width: 25px;
     height: 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border: 1px solid gray;
 }
 
 .enemy-bar-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .enemy-bar-box > p {
@@ -366,8 +417,13 @@ li {
     position: absolute;
     top: 0;
     background-color: rgba(0,0,0,.9);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding: 5px;
 }
 
@@ -387,14 +443,20 @@ li {
 }
 
 .inventory .item-list {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     overflow-y: auto;
 }
 
 .inventory .item-prop-list {
     padding: 0 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: baseline;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
 }
 
 
@@ -410,7 +472,9 @@ li {
 }
 
 .flex-ellipsis {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     overflow-x: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -435,9 +499,15 @@ li {
 .inventory .inv-bottom {
     height: 30px;
     padding: 5px 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .inventory .message-list,
@@ -445,7 +515,9 @@ li {
     overflow-x: hidden;
     overflow-y: auto;
     padding: 0 5px;
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
 }
 
 .inventory .message-list > li {
@@ -456,21 +528,33 @@ li {
 }
 
 .inventory .command-list-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
 }
 
 .inventory .command {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .inventory .command-key {
     width: 120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .inventory .stats-list-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 5px 0;
     font-size: .9em;
@@ -482,13 +566,21 @@ li {
 }
 
 .inventory .stats-prop-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .inventory .skill-list {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     overflow-y: auto;
 }
 
@@ -498,6 +590,8 @@ li {
 }
 
 .inventory .skill-prop-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -537,7 +631,9 @@ li {
     height: auto;
     max-height: 100%; */
     text-align: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     overflow-y: auto;
 }
 
@@ -583,14 +679,19 @@ li {
 
 #investigation-fighter .base-prop-list {
     width: 100%;
-    flex-wrap: wrap;
-    align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
     overflow-y: hidden;
     padding: 0 10px 10px;
 }
 
 #investigation-fighter .base-prop {
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin: 0 10px;
     height: 20px;
     min-width: 200px;
@@ -600,6 +701,8 @@ li {
 .inventory .base-prop,
 .inventory .mod-prop,
 .inventory .mod-parts-prop-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -610,9 +713,16 @@ li {
 
 .inventory .base-prop-list,
 .inventory .mod-prop-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .inventory .mod-parts {
@@ -631,7 +741,9 @@ li {
 }
 
 #recipe-container .item-recipe {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
 }
 
 .hide {
