--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ p {
 
 a {
     color: #fff;
+    -webkit-transition: color .2s;
     transition: color .2s;
 }
 
@@ -27,7 +28,8 @@ button:focus,
 .btn.focus,
 .btn:focus {
     outline: none;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 
 img {
@@ -74,7 +76,7 @@ ul {
     border-radius: 10px;
     color: #fff;
     display: inline-block;
-    font-family: 'Crimson Text';
+    font-family: 'Crimson Text', sans-serif;
     font-size: 30px;
     padding: 10px 30px;
     text-align: center;
@@ -122,18 +124,20 @@ ul {
 
 .navbar-collapse {
     -ms-flex-positive: 0;
-    flex-grow: 0;
+    -webkit-box-flex: 0;
+            flex-grow: 0;
     margin-left: auto;
 }
 
 .navbar {
     background-color: rgba(58, 54, 45, .75);
+    -webkit-transition: background-color .3s;
     transition: background-color .3s;
 }
 
 .navbar-brand {
     color: #fff;
-    font-family:  'Stardos Stencil';
+    font-family:  'Stardos Stencil', sans-serif;
     font-size: 1.5rem;
     margin-right: 0;
     padding-bottom: 0;
@@ -165,7 +169,10 @@ ul {
     height: 2px;
     left: 0;
     position: absolute;
+    -webkit-transition: opcity .2s, -webkit-transform .2s;
+    transition: opcity .2s, -webkit-transform .2s;
     transition: transform .2s, opcity .2s;
+    transition: transform .2s, opcity .2s, -webkit-transform .2s;
     top: 5px;
     width: 30px;
 }
@@ -398,10 +405,19 @@ header .link-box {
 
 /* Section Spec */
 .section-spec .spec-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .section-spec .spec-list > li > span:first-child {
@@ -523,11 +539,15 @@ footer .nav-back:focus {
     }
 
     .navbar-brand {
-        order: 1;
+        -webkit-box-ordinal-group: 2;
+            -ms-flex-order: 1;
+                order: 1;
     }
 
     .navbar-collapse {
-        order: 2;
+        -webkit-box-ordinal-group: 3;
+            -ms-flex-order: 2;
+                order: 2;
     }
 
     .navbar-expand-md .navbar-nav .nav-link {
@@ -535,7 +555,9 @@ footer .nav-back:focus {
     }
 
     .music-box {
-        order: 3;
+        -webkit-box-ordinal-group: 4;
+            -ms-flex-order: 3;
+                order: 3;
     }
 
     .music-btn {
@@ -555,7 +577,10 @@ footer .nav-back:focus {
     }
     
     .section-spec .spec-box {
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
     }
 
     .section-spec .link-box {
