--- a/game/css/main.css
+++ b/game/css/main.css
@@ -1,162 +1,232 @@
-body{
+html, body {
+    height: 100%;
+}
+
+body {
 	color:white;
 	background:#3A362D;
 	font-family: "'Yu Gothic', 'Hiragino Kaku Gothic Pro', 'Hiragino Kaku Gothic ProN', 'TakaoExGothic', 'Meiryo', 'MS PGothic', sans-serif";
 	font-size: 14px;
 	letter-spacing: 1px;
+	margin: 0;
+	padding: 5px 25px;
 }
 
-main{
-	padding-left:5px;
+#modal-link-container {
+	position: fixed;
+	top: 50%;
+	right: 1%;
+	z-index: 101;
+	-webkit-transform: translateY(-50%);
+	        transform: translateY(-50%);
 }
 
-article {
-	margin-left: 10px;
-	margin-bottom: 50px;
+.modal-link-list {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 }
 
-h1 {
+.modal-link-list > li {
+	margin-bottom: 10px;
+}
+
+.modal-link {
+	position: relative;
+}
+
+.modal-link-circle {
+	display: block;
+	border-radius: 50%;
+	width: 10px;
+	height: 10px;
+	background-color: #fff;
+}
+
+.modal-open > .modal-link-circle,
+.modal-link:hover > .modal-link-circle,
+.modal-link:focus > .modal-link-circle {
+	background-color: #CA9D48 !important;
+}
+
+.popup {
+    background-color: #fff;
+    color: #3A362D;
+    display: none;
+    font-size: 12px;
+    padding: 5px 10px;
+	position: absolute;
+	top: -20px;
+	right: 5px;
+    white-space: nowrap;
+    z-index: 9999;
+}
+
+.modal-link:hover > .popup {
+    display: inline;
+}
+
+.modal-container {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	overflow: hidden;
+}
+
+.modal-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0,.7);
+}
+
+.modal-close {
+	position: absolute;
+	top: 0;
+	right: 0;
+	color: #fff;
+	cursor: pointer;
+	width: 50px;
+	height: 50px;
+	font-size: 40px;
+	font-weight: 500;
+	text-align: center;
+}
+
+.modal-content {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
+	height: 95%;
+	width: 75%;
+	background-color: #29261e;
+	overflow: auto;
+}
+
+.modal-content {
+	padding: 10px;
+}
+
+.modal-content .title {
 	font-family: 'Stardos Stencil';
 	font-weight: 500;
 	font-size: 30px;
 }
 
-h2 {
+.modal-content h2 {
 	margin: 20px 0 5px 0;
 	font-size: 16px;
 	font-weight: 500;
 }
 
-ul {
-	margin-top: 0;
-}
-
-ul li{
-	padding-top:5px;
-	padding-bottom:5px;
-}
-
-a {
+.modal-content a {
 	color: #9BC8A1;
+}
+
+.modal-content > ul,
+.modal-content > section {
+	padding-left: 10px;
+}
+
+#link-system ul {
+	list-style-type: disc;
+	padding-left: 40px;
+}
+
+.modal-content ul > li {
+	margin-bottom: 10px;
+}
+
+.page-back {
+	margin-top: 50px;
+	padding-left: 10px;
 }
 
 footer {
 	text-align: center;
-}
-
-#canvas-container{
-	background-color: black;
-	border: 2px solid #E8D296;
-	margin: 20px auto 50px;
-	position:relative;
-	overflow: hidden;
-}
-
-canvas {
 	position: absolute;
 	left: 0;
-	top: 0;
-}
-
-canvas:nth-of-type(1) {
-	z-index: 0;
-}
-
-canvas:nth-of-type(2) {
-	z-index: 1;
-}
-
-canvas:nth-of-type(3) {
-	z-index: 2;
-}
-
-canvas:nth-of-type(4) {
-	z-index: 3;
-}
-
-canvas:nth-of-type(5) {
-	z-index: 4;
-}
-
-canvas:nth-of-type(6) {
-	z-index: 5;
-}
-
-#msg-err {
-	margin: 10px;
-	display: inline-block;
+	bottom: 0;
+	width: 100%;
+	margin-bottom: 10px;
 }
 
 button:hover {
 	cursor: pointer;
 }
 
-#command-container,
-#recipe-container {
-	background-color: rgb(41, 38, 30);
-	margin-top: 20px;
-	padding-top: 10px;
-	padding-bottom: 5px;
-	overflow-x: hidden;
+#site-command-container,
+#site-recipe-container {
+	overflow-y: auto;
 }
 
-#command-container ul {
-	margin-bottom: 0;
-	display: -webkit-flex;
+#site-command-container ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	-webkit-flex-direction: column;
-	flex-direction: column;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	height: 550px;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	height: 560px;
 }
 
-#command-container ul > li {
+#site-command-container ul > li {
 	margin-right: 30px;
 }
 
-#command-container span:first-child {
+#site-command-container span:first-child {
 	display: block;
 	float: left;
 }
 
-#command-container span:last-child {
+#site-command-container span:last-child {
 	display: block;
 	margin-left: 90px;
 }
 
-#recipe-container li:first-child {
-	list-style: none;
-}
-
-#recipe-container li:first-child .cost {
+#site-recipe-container li:first-child .cost {
 	margin-left: 75px;
 }
 
-#recipe-container span:nth-of-type(1) {
+#site-recipe-container span:nth-of-type(1) {
 	position: absolute;
-	left: 60px;
+	left: 20px;
 }
 
-#recipe-container span:nth-of-type(2) {
+#site-recipe-container span:nth-of-type(2) {
 	display: block;
 	float: left;
-	margin-left: 90px;
+	margin-left: 100px;
 }
 
-#recipe-container span:nth-of-type(3) {
+#site-recipe-container span:nth-of-type(3) {
 	display: block;
-	margin-left: 150px;
+	margin-left: 160px;
 }
 
-@media screen and (max-width: 850px) {
-	#command-container ul {
-		height: 820px;;
+@media screen and (max-width: 1050px) {
+	#site-command-container ul {
+		height: 820px;
 	}
 }
 
-@media screen and (max-width: 600px) {
-	#command-container ul {
+@media screen and (max-width: 700px) {
+	#site-command-container ul {
 		height: auto;
 	}
 }
